Added README, refactor.

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -16,6 +16,7 @@
   <script src="src/Game.js"></script>
 
   <!-- include spec files here... -->
+  <script src="spec/SpecHelper.js"></script>
   <script src="spec/GameSpec.js"></script>
 
 </head>
@@ -34,7 +35,5 @@
       jasmineEnvironment.execute();
     }
     </script>
-
-
 </body>
 </html>
